Update Dagger mark

--- a/RetinaGS/index.html
+++ b/RetinaGS/index.html
@@ -73,7 +73,7 @@
                 </a>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=tAgSyxIAAAAJ" target="_blank">Sijie Yan
-                </a><sup>✝</sup>,</span>
+                </a><sup>†</sup>,</span>
               <span class="author-block">
                 <a href="https://yjxiong.me/" target="_blank">Yuanjun Xiong
                 </a></span>
@@ -81,7 +81,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">MThreads AI<br></span>
-              <span class="eql-cntrb"><small><br><sup>*</sup> Equal Contribution  <sup>✝</sup> Corresponding Author </small></span>
+              <span class="eql-cntrb"><small><br><sup>*</sup> Equal Contribution  <sup>†</sup> Corresponding Author </small></span>
             </div>
 
             <div class="column has-text-centered">
