--- a/RetinaGS/index.html
+++ b/RetinaGS/index.html
@@ -110,7 +110,7 @@
 
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/MatlabChen/RetinaGS" target="_blank"
+                  <a href="https://github.com/MooreThreads/RetinaGS" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
